# CubeCobraRecommender

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  cards.json  create_mtx.py  cut_cards.py  ml_recommend.py  model.py  pyproject.toml  rec_funcs.py  recommend.py  requirements.txt  setup.py  utils.py
.docker/: docker-compose.yml
cpp/: generator.cpp
ml_files/: cubes.npy  iko_id_map.json  recommender_id_map.json
ml_files/20210407/: .commit  keras_metadata.pb  saved_model.pb
ml_files/20210409/: embedding.tsv  embedding_labels.tsv  embeddings_projector.json  int_to_card.json  keras_metadata.pb  saved_model.pb
ml_files/20210410/: embedding.tsv  embedding_labels.tsv  embeddingnormal.tsv  int_to_card.json  keras_metadata.pb  saved_model.pb
ml_files/IKO/: saved_model.pb
ml_files/cc_rec/: saved_model.pb
ml_files/cc_rec_1000/: saved_model.pb
ml_files/cc_rec_1000_2/: saved_model.pb
ml_files/cc_rec_1000_regularization/: saved_model.pb
ml_files/cc_rec_5000/: .gitattributes
ml_files/cc_rec_final/: saved_model.pb
ml_files/cc_rec_kl_reg/: saved_model.pb
ml_files/high_noise/: saved_model.pb
ml_files/high_req/: saved_model.pb
ml_files/rec_and_emb/: saved_model.pb
ml_files/recommender/: saved_model.pb
src/ml/: generator.py  model.py  train.py
src/non_ml/: create_mtx.py  update_data.py  utils.py
src/scripts/: all_cube_embeddings.py  combine_json.py  compare.py  cube_similarity.py  cut_cards.py  download_data.py  json_to_graph.py  (+3 more)
web/: README.md  __init__.py  ml_embeddings_web.py  ml_recommend_web.py  requirements.txt
(+38 files in other folders)
